fixed logo being off center

--- a/app/assets/stylesheets/components/navbar/logo.scss
+++ b/app/assets/stylesheets/components/navbar/logo.scss
@@ -1,6 +1,6 @@
 .logo {
   position: relative;
-  display: inline-block;
+  display: block;
   height: 4rem;
   width: 4rem;
   background-color: #bbb;
